--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 attrs==25.3.0
 blinker==1.9.0
+cachetools==5.5.2
 cattrs==24.1.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -8,6 +9,13 @@ cloudevents==1.11.0
 deprecation==2.1.0
 flask==3.1.0
 functions-framework==3.8.2
+google-api-core==2.24.2
+google-auth==2.38.0
+google-cloud-core==2.4.3
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
 gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
@@ -15,9 +23,14 @@ jinja2==3.1.6
 looker-sdk==25.4.0
 markupsafe==3.0.2
 packaging==24.2
+proto-plus==1.26.1
+protobuf==6.30.2
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
 pypdf2==3.0.1
 pyyaml==6.0.2
 requests==2.32.3
+rsa==4.9
 typing-extensions==4.13.2
 urllib3==2.4.0
 watchdog==6.0.0
