--- a/workflow-wbr.yaml
+++ b/workflow-wbr.yaml
@@ -55,6 +55,7 @@ main:
                             do: "check_render_task"
                           body:
                             render_task_id: ${render_task_result.body.render_task_id}
+                            dashboard_id: ${dashboard_id}
                           auth:
                             type: OIDC
                         result: task_status
@@ -74,7 +75,7 @@ main:
               # Add the render task ID to our collection
               - add_task_id:
                   assign:
-                    - render_task_ids: ${list.concat(render_task_ids, [render_task_result.body.render_task_id])}
+                    - render_task_ids: ${list.concat(render_task_ids, render_task_result.body.render_task_id)}
 
     # Step 5: Combine render tasks
     - combine_tasks:
