--- a/workflow-wbr.yaml
+++ b/workflow-wbr.yaml
@@ -8,6 +8,7 @@ main:
           - project_id: ${sys.get_env("GOOGLE_CLOUD_PROJECT_ID")}
           - timestamp: ${time.format(sys.now())}
           - folder_name: ${text.replace_all(text.replace_all(timestamp, "[^A-Za-z0-9]", "_"), "_+", "_")}
+          - run_id: ${folder_name}
           - function_url: ${"https://" + region + "-" + project_id + ".cloudfunctions.net/" + function_name}
           - render_task_ids: []
 
@@ -20,6 +21,7 @@ main:
             do: "folder_dashboards"
           body:
             folder_id: ${folder_id}
+            run_id: ${run_id}
           auth:
             type: OIDC
         result: dashboard_response
@@ -40,6 +42,7 @@ main:
                       do: "render_task"
                     body:
                       dashboard_id: ${dashboard_id}
+                      run_id: ${run_id}
                     auth:
                       type: OIDC
                   result: render_task_result
@@ -56,6 +59,7 @@ main:
                           body:
                             render_task_id: ${render_task_result.body.render_task_id}
                             dashboard_id: ${dashboard_id}
+                            run_id: ${run_id}
                           auth:
                             type: OIDC
                         result: task_status
@@ -87,6 +91,7 @@ main:
           body:
             render_task_ids: ${render_task_ids}
             folder_name: ${folder_name}
+            run_id: ${run_id}
           auth:
             type: OIDC
         result: combined_result
