--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,12 @@ google-api-core==2.24.2
 google-auth==2.38.0
 google-cloud-core==2.4.3
 google-cloud-storage==3.1.0
+google-cloud-workflows==1.18.1
 google-crc32c==1.7.1
 google-resumable-media==2.7.2
 googleapis-common-protos==1.69.2
+grpcio==1.71.0
+grpcio-status==1.71.0
 gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
@@ -24,7 +27,7 @@ looker-sdk==25.4.0
 markupsafe==3.0.2
 packaging==24.2
 proto-plus==1.26.1
-protobuf==6.30.2
+protobuf==5.29.4
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pypdf2==3.0.1
