--- a/pdf-combiner.yaml
+++ b/pdf-combiner.yaml
@@ -1,9 +1,9 @@
 main:
+  params: [input]
   steps:
     - init:
         assign:
-          - function_name: "function-wbr"
-          - folder_id: "11"
+          - function_name: "function-pdf-combiner"
           - region: ${sys.get_env("GOOGLE_CLOUD_LOCATION")}
           - project_id: ${sys.get_env("GOOGLE_CLOUD_PROJECT_ID")}
           - timestamp: ${time.format(sys.now())}
@@ -11,19 +11,37 @@ main:
           - run_id: ${folder_name}
           - function_url: ${"https://" + region + "-" + project_id + ".cloudfunctions.net/" + function_name}
           - render_task_ids: []
+          - access_token: ${default(map.get(input, "access_token"), "")}
+          - looker_sdk_base_url: ${default(map.get(input, "looker_sdk_base_url"), "")}
+          - looker_sdk_base_url: ${default(map.get(input, "looker_sdk_base_url"), "")}
+    # Step 0: Get PDF_COMBINER_SECRET
+    - get_auth:
+        steps:
+          - get_secret:
+              call: googleapis.secretmanager.v1.projects.secrets.versions.accessString
+              args:
+                secret_id: PDF_COMBINER_SECRET
+                project_id: ${project_id}
+              result: secret
+          - set_auth:
+              assign:
+                - authorization: ${secret}
 
     # Step 1: Get all folder dashboards
     - get_dashboards:
         call: http.post
         args:
+          headers:
+            Authorization: ${authorization}
+            x-access-token: ${access_token}
+            x-lookersdk-base-url: ${looker_sdk_base_url}
           url: ${function_url}
           query:
             do: "folder_dashboards"
           body:
-            folder_id: ${folder_id}
+            folder_id: ${input.folder_id}
             run_id: ${run_id}
-          auth:
-            type: OIDC
+            input: ${input}
         result: dashboard_response
 
     # Step 2: Create render tasks for each dashboard in parallel
@@ -43,8 +61,11 @@ main:
                     body:
                       dashboard_id: ${dashboard_id}
                       run_id: ${run_id}
-                    auth:
-                      type: OIDC
+                      input: ${input}
+                    headers:
+                      Authorization: ${authorization}
+                      x-access-token: ${access_token}
+                      x-lookersdk-base-url: ${looker_sdk_base_url}
                   result: render_task_result
 
               # Check render task status and wait if needed
@@ -60,8 +81,11 @@ main:
                             render_task_id: ${render_task_result.body.render_task_id}
                             dashboard_id: ${dashboard_id}
                             run_id: ${run_id}
-                          auth:
-                            type: OIDC
+                            input: ${input}
+                          headers:
+                            Authorization: ${authorization}
+                            x-access-token: ${access_token}
+                            x-lookersdk-base-url: ${looker_sdk_base_url}
                         result: task_status
 
                     - wait_if_needed:
@@ -92,8 +116,11 @@ main:
             render_task_ids: ${render_task_ids}
             folder_name: ${folder_name}
             run_id: ${run_id}
-          auth:
-            type: OIDC
+            input: ${input}
+          headers:
+            Authorization: ${authorization}
+            x-access-token: ${access_token}
+            x-lookersdk-base-url: ${looker_sdk_base_url}
         result: combined_result
 
     - return_result:
